# Aurras

./: .example.py.swp  .gitignore  .image_renderer.py.swn  .image_renderer.py.swo  .image_renderer.py.swp  .spotdl-cache  Believer.spotdlTrackingFile  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  The Real Hero.spotdlTrackingFile  Tusk TUI.excalidraw  aurras.py  aurras_tui.py  auth.json  authenticatespotify.py  autoplay.py  config.py  css.tcss  debug_cli.py  dev_install.sh  downloadsong.py  genre.py  importplaylists.py  load.py  logger.py  lyrics.py  mpvsetup.py  play_songs.py  playlist.py  playsong.py  publish.sh  pyproject.toml  recently_played_songs.txt  recommendation.py  requirements.txt  searchsong.py  setup_dependencies.py  setup_dev_env.py  (+6 more)
.github/: FUNDING.yml
.github/workflows/: build-wheels.yml  test-installations.yml  test-local-choco.yml
TrendingSongs/: get_trending_songs.py  trending_songs.txt
aurras/: __init__.py  __main__.py  cli.py  tui_cli.py
aurras/aurras_cli/: __main__.py
aurras/aurras_tui/: __main__.py
aurras/core/: __init__.py  downloader.py  player.py  settings.py
aurras/core/backup/: __init__.py  manager.py  restore.py  storage.py  utils.py
aurras/core/cache/: __init__.py  connection.py  initialize.py  loader.py  search_db.py  updater.py
aurras/core/player/: __init__.py  history.py  memory.py  offline.py  online.py  python_mpv.py
aurras/core/playlist/: download.py  manager.py
aurras/core/settings/: __init__.py  io.py  updater.py
aurras/player/: autoplay.py  cache.py  history.py  lyrics_handler.py  memory.py  mpv.py  offline.py  online.py  python_mpv.py  queue.py  setup.py
aurras/player/mpv/: __init__.py  core.py  events.py  history_integration.py  keyboard.py  lyrics_integration.py  progress.py  state.py  ui.py
aurras/playlist/: __init__.py  delete.py  download.py  manager.py  sync.py
aurras/playlist/cache/: initialize.py  loader.py  search_db.py  updater.py
aurras/services/: __init__.py  lyrics.py  recommendations.py
aurras/services/lyrics/: __init__.py  cache.py  fetcher.py  formatter.py  manager.py  parser.py
aurras/services/spotify/: __init__.py  api.py  auth.py  auth_helper.py  cache.py  client.py  connection.py  database.py  fetcher.py  importer.py  oauth_handler.py  service.py  setup.py
aurras/services/youtube/: __init__.py  search.py
aurras/themes/: __init__.py  colors.py  definitions.py  manager.py  themes.py  tui_adapter.py  utils.py
aurras/themes/adapters/: __init__.py  rich_adapter.py  textual_adapter.py
aurras/tui/: __init__.py  app.py  commands.py
aurras/tui/commands/: __init__.py  app_commands.py  (+2 more)
aurras/ui/: __init__.py  adaptive_completer.py  command_handler.py  command_palette.py  command_palette_invoker.py  input_handler.py  search_bar.py  shortcut_handler.py
aurras/utils/: __init__.py  backup.py  backup_manager.py  cache_cleanup.py  config.py  db_connection.py  decorators.py  exceptions.py  handle_fuzzy_search.py  initialization.py  logger.py  parsing.py  path_manager.py  terminal.py  theme_helper.py
config/: config.py  default_settings.py  default_settings.yaml  path.py
config/settings/: create_default_settings.py  default_settings.py  load_default_settings.py
docs/: backup_restore.md  command_palette.md  keyboard_shortcuts.md  playlist_management.md  search_implementation.md  spotify_integration.md  theme_implementation.md  troubleshooting.md
exceptions/: exceptions.py
lib/: lyrics.py  mpvsetup.py  recommendation.py  searchsong.py  term_utils.py
lib/authenticatespotify/: spotify_auth_handler.py  spotify_database_handler.py
libs/: logger.py  lyrics.py  recommendation.py  term_utils.py
libs/manage_cache/: initialize_cache.py  load_cache.py  update_cache.py
libs/manage_spotify/: setup_spotify_connection.py  spotify_auth_handler.py  spotify_database_handler.py
mpv/: mpv.com
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/choco/: aurras.nuspec
packaging/homebrew/: aurras.rb
pages/: downloads.py
scripts/: build_platform_wheels.py  generate_srcinfo.py  release_manager.py
spotdl-temp/: Kx7B-XvmFtE.weba.part
src/: .gitignore  aurras.py
src/command_palette/: command_palette_config.py
src/scripts/: downloadsong.py  input_handler.py  playlist.py  playsong.py
src/search_utilities/: dynamic_search_bar.py  feature_suggestions.py  insearch_song_suggestions.py  invoke_command_palette.py  playlist_suggestions.py  search_utils.py  suggest_songs_from_history.py
test_codes/: example.py  image_renderer.py
tests/: __init__.py
utils/: decorators.py
(+123 files in other folders)
