[tool.poetry]
name = "aurras"
version = "0.1.0"
description = "A high-end command line music player"
authors = ["vedant-asati03 <vedant.asati03@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vedant-asati03/Aurras"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
keywords = ["music", "player", "audio", "cli", "terminal", "youtube", "spotify"]
packages = [{include = "aurras"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
googletrans = "*"
keyboard = "*"
prompt-toolkit = "*"
rich = "*"
spotipy = "*"
questionary = "*"
ytmusicapi = "*"
PyYAML = "*"
sqlitedict = "*"
textual = "*"
pillow = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
aurras = "aurras.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
