[project]
name = "aurras"
version = "1.1.1"
description = "A high-end command line music player"
authors = [
    {name = "vedant-asati03", email = "vedant.asati03@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
keywords = ["music", "player", "audio", "cli", "terminal", "youtube", "spotify"]
dependencies = [
    # Dependencies are now managed in requirements.txt
]

[project.urls]
repository = "https://github.com/vedant-asati03/Aurras"

[project.scripts]
aurras = "aurras.aurras_cli.__main__:main"
aurras-tui = "aurras.aurras_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aurras"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
